[package]
name = "gitnu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gnu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
walkdir = "2"
colored = "2"
glob = "0.3"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"